--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "embla-carousel-react": "^8.6.0",
-    "firebase": "^11.9.1",
+    "firebase": "^11.10.0",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.525.0",
     "phosphor-react": "^1.4.1",
@@ -36,6 +36,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.29.0",
+    "@types/leaflet": "^1.9.20",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "@types/react-helmet": "^6.1.11",
